--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "angular-fusioncharts",
+  "version": "3.1",
   "description": "Angular plugin for FusionCharts",
   "main": "src/angular-fusioncharts",
   "authors": [
